Progress with matching quiz

--- a/Enfoca/Features/Quiz/Quiz.storyboard
+++ b/Enfoca/Features/Quiz/Quiz.storyboard
@@ -182,6 +182,119 @@
             </objects>
             <point key="canvasLocation" x="984" y="112"/>
         </scene>
+        <!--Matching Round View Controller-->
+        <scene sceneID="60i-Mq-omf">
+            <objects>
+                <viewController id="Dm1-0E-fXf" customClass="MatchingRoundViewController" customModule="Enfoca" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="28e-oR-aT2"/>
+                        <viewControllerLayoutGuide type="bottom" id="18w-0f-hie"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="07f-hk-unr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ejV-Zt-Klr">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Matching Round" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaF-Sg-kko">
+                                        <rect key="frame" x="48" y="32" width="318" height="26"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="22"/>
+                                        <color key="textColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="HaF-Sg-kko" secondAttribute="trailing" constant="48" id="CYU-yv-9I5"/>
+                                    <constraint firstAttribute="height" constant="100" id="dGh-tQ-3pY"/>
+                                    <constraint firstItem="HaF-Sg-kko" firstAttribute="leading" secondItem="ejV-Zt-Klr" secondAttribute="leading" constant="48" id="dVz-4W-zte"/>
+                                    <constraint firstItem="HaF-Sg-kko" firstAttribute="top" secondItem="ejV-Zt-Klr" secondAttribute="top" constant="32" id="h5u-7N-Jcd"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sod-yw-sBR">
+                                <rect key="frame" x="0.0" y="100" width="414" height="636"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Jdv-zM-Aqz">
+                                        <rect key="frame" x="0.0" y="46" width="414" height="590"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VUK-Mh-Bei">
+                                            <size key="itemSize" width="117" height="55"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MatchingQuizTagCell" id="ZdL-Re-Lfq" customClass="MatchingQuizTagCell" customModule="Enfoca" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="117" height="55"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                    <rect key="frame" x="0.0" y="0.0" width="117" height="55"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mqf-0b-w5v">
+                                                            <rect key="frame" x="16" y="16" width="85" height="23"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottomMargin" secondItem="Mqf-0b-w5v" secondAttribute="bottom" constant="8" id="PUK-sq-mN4"/>
+                                                    <constraint firstAttribute="trailingMargin" secondItem="Mqf-0b-w5v" secondAttribute="trailing" constant="8" id="Z1V-4E-nBy"/>
+                                                    <constraint firstItem="Mqf-0b-w5v" firstAttribute="leading" secondItem="ZdL-Re-Lfq" secondAttribute="leadingMargin" constant="8" id="aac-QY-9za"/>
+                                                    <constraint firstItem="Mqf-0b-w5v" firstAttribute="top" secondItem="ZdL-Re-Lfq" secondAttribute="topMargin" constant="8" id="hMA-Il-eZd"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="titleLabel" destination="Mqf-0b-w5v" id="Kpm-T1-oYG"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="Dm1-0E-fXf" id="GSy-t1-a5d"/>
+                                            <outlet property="delegate" destination="Dm1-0E-fXf" id="585-jq-5DW"/>
+                                        </connections>
+                                    </collectionView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jBo-si-mrb">
+                                        <rect key="frame" x="192" y="8" width="30" height="30"/>
+                                        <state key="normal" title="Skip">
+                                            <color key="titleColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="skipAction:" destination="Dm1-0E-fXf" eventType="touchUpInside" id="RDW-io-fEx"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Jdv-zM-Aqz" secondAttribute="trailing" id="0dv-bM-k39"/>
+                                    <constraint firstItem="jBo-si-mrb" firstAttribute="top" secondItem="sod-yw-sBR" secondAttribute="top" constant="8" id="8xD-l0-mG4"/>
+                                    <constraint firstItem="Jdv-zM-Aqz" firstAttribute="leading" secondItem="sod-yw-sBR" secondAttribute="leading" id="bCM-fR-YE9"/>
+                                    <constraint firstItem="jBo-si-mrb" firstAttribute="centerX" secondItem="sod-yw-sBR" secondAttribute="centerX" id="dRX-1m-Wc8"/>
+                                    <constraint firstItem="Jdv-zM-Aqz" firstAttribute="top" secondItem="sod-yw-sBR" secondAttribute="top" constant="46" id="q1m-wk-Plw"/>
+                                    <constraint firstAttribute="bottom" secondItem="Jdv-zM-Aqz" secondAttribute="bottom" id="yQg-gb-ywc"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="ejV-Zt-Klr" firstAttribute="top" secondItem="07f-hk-unr" secondAttribute="top" id="2ba-AL-JI3"/>
+                            <constraint firstAttribute="trailing" secondItem="ejV-Zt-Klr" secondAttribute="trailing" id="GHe-6w-j9C"/>
+                            <constraint firstItem="sod-yw-sBR" firstAttribute="leading" secondItem="07f-hk-unr" secondAttribute="leading" id="KX4-7I-cUe"/>
+                            <constraint firstItem="ejV-Zt-Klr" firstAttribute="leading" secondItem="07f-hk-unr" secondAttribute="leading" id="PAj-oq-rdq"/>
+                            <constraint firstAttribute="trailing" secondItem="sod-yw-sBR" secondAttribute="trailing" id="bcR-2i-1uF"/>
+                            <constraint firstItem="sod-yw-sBR" firstAttribute="top" secondItem="ejV-Zt-Klr" secondAttribute="bottom" id="v6D-uh-a1o"/>
+                            <constraint firstItem="18w-0f-hie" firstAttribute="top" secondItem="sod-yw-sBR" secondAttribute="bottom" id="zAZ-iS-hRt"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="qW3-WU-nJg" kind="show" identifier="ResumeQuizSegue" id="AKo-2B-8On"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T4m-wK-QWl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1142" y="1006"/>
+        </scene>
         <!--Card Front View Controller-->
         <scene sceneID="5hr-3h-k45">
             <objects>
@@ -406,6 +519,7 @@
                         <outlet property="definitionLabel" destination="41O-AB-x6M" id="02G-jg-wy6"/>
                         <outlet property="headerView" destination="f5y-Mu-LBE" id="6d6-Y2-oT3"/>
                         <segue destination="imM-i9-s0b" kind="show" identifier="QuizResultsSegue" id="wkj-nQ-MFe"/>
+                        <segue destination="Dm1-0E-fXf" kind="show" identifier="MatchingRoundSeque" id="7OF-2a-AVh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5lr-11-Wh9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -500,4 +614,7 @@
             <point key="canvasLocation" x="4434" y="112"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="AKo-2B-8On"/>
+    </inferredMetricsTieBreakers>
 </document>
